# linguistic-data-visualization

./: .gitignore  README.md  VERIFICATION_GUIDE.md  index.html  package-lock.json  package.json  test_knowledge_base.js  test_knowledge_base.mjs  vite.config.js
backend/: README.md  api.py  knowledge_base.py  process_documents.py  pyproject.toml  requirements.txt  simple_api.py  simple_knowledge_base.py  start-uv.bat  start-uv.sh  start.py
backend/knowledge_db/: documents.pkl  metadata.pkl  vectors.pkl
public/: EDGE_tree.nex  config.js  data_gb_dplace_edge.csv
public/doreco_sout3282_core_v1.3/: doreco_CONVENTIONS.txt  doreco_README.txt  doreco_sout3282_dataset-info.txt  doreco_sout3282_gloss-abbreviations.csv  doreco_sout3282_mc_english_kent02_b_part1.TextGrid  doreco_sout3282_mc_english_kent02_b_part1.xml  doreco_sout3282_mc_english_kent02_b_part2.TextGrid  doreco_sout3282_mc_english_kent02_b_part2.xml  doreco_sout3282_mc_english_kent03_b_part1.TextGrid  doreco_sout3282_mc_english_kent03_b_part1.xml  doreco_sout3282_mc_english_kent03_b_part2.TextGrid  doreco_sout3282_mc_english_kent03_b_part2.xml  doreco_sout3282_metadata.csv  doreco_sout3282_renamed-tiers.csv  doreco_sout3282_transcription-conventions.csv
public/dplace-cldf/: .gitignore  .gitmodules  .zenodo.json  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  RELEASING.md  cldfbench_dplace.py  metadata.json  setup.cfg  setup.py  test.py
src/: App.css  App.jsx  main.jsx
src/assets/: style.css
src/components/: ApiKeyModal.jsx  ChatWidget.jsx  CorrelationAnalysis.jsx  DataModeToggle.jsx  MapView.jsx  (+10 more)
(+131 files in other folders)
